Assignment6/assgn6_19CS30033_19CS30036.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 constant: INTEGER_CONSTANT
    6         | FLOATING_CONSTANT
    7         | CHARACTER_CONSTANT

    8 M: %empty

    9 N: %empty

   10 changetable: %empty

   11 postfix_expression: primary_expression
   12                   | postfix_expression '[' expression ']'
   13                   | postfix_expression '(' ')'
   14                   | postfix_expression '(' argument_expression_list ')'
   15                   | postfix_expression DOT IDENTIFIER
   16                   | postfix_expression ARROW IDENTIFIER
   17                   | postfix_expression INCREMENT
   18                   | postfix_expression DECREMENT
   19                   | '(' type_name ')' '{' initializer_list '}'
   20                   | '(' type_name ')' '{' initializer_list COMMA '}'

   21 argument_expression_list: assignment_expression
   22                         | argument_expression_list COMMA assignment_expression

   23 unary_expression: postfix_expression
   24                 | INCREMENT unary_expression
   25                 | DECREMENT unary_expression
   26                 | unary_operator cast_expression
   27                 | SIZEOF unary_expression
   28                 | SIZEOF '(' type_name ')'

   29 unary_operator: BITWISEAND
   30               | STAR
   31               | PLUS
   32               | MINUS
   33               | NOT
   34               | EXCLAMATION

   35 cast_expression: unary_expression
   36                | '(' type_name ')' cast_expression

   37 multiplicative_expression: cast_expression
   38                          | multiplicative_expression STAR cast_expression
   39                          | multiplicative_expression DIVIDE cast_expression
   40                          | multiplicative_expression PERCENTAGE cast_expression

   41 additive_expression: multiplicative_expression
   42                    | additive_expression PLUS multiplicative_expression
   43                    | additive_expression MINUS multiplicative_expression

   44 shift_expression: additive_expression
   45                 | shift_expression LEFTSHIFT additive_expression
   46                 | shift_expression RIGHTSHIFT additive_expression

   47 relational_expression: shift_expression
   48                      | relational_expression LESSTHAN shift_expression
   49                      | relational_expression GREATERTHAN shift_expression
   50                      | relational_expression LESSEQUAL shift_expression
   51                      | relational_expression GREATEREQUAL shift_expression

   52 equality_expression: relational_expression
   53                    | equality_expression EQUAL relational_expression
   54                    | equality_expression NOTEQUAL relational_expression

   55 and_expression: equality_expression
   56               | and_expression BITWISEAND equality_expression

   57 exclusive_or_expression: and_expression
   58                        | exclusive_or_expression XOR and_expression

   59 inclusive_or_expression: exclusive_or_expression
   60                        | inclusive_or_expression BITWISEOR exclusive_or_expression

   61 logical_and_expression: inclusive_or_expression
   62                       | logical_and_expression N AND M inclusive_or_expression

   63 logical_or_expression: logical_and_expression
   64                      | logical_or_expression N OR M logical_and_expression

   65 conditional_expression: logical_or_expression
   66                       | logical_or_expression N QUESTIONMARK M expression N COLON M conditional_expression

   67 assignment_expression: conditional_expression
   68                      | unary_expression assignment_operator assignment_expression

   69 assignment_operator: ASSIGN
   70                    | MULTIPLYEQUAL
   71                    | DIVIDEEQUAL
   72                    | MODULOEQUAL
   73                    | PLUSEQUAL
   74                    | MINUSEQUAL
   75                    | SHIFTLEFTEQUAL
   76                    | SHIFTRIGHTEQUAL
   77                    | ANDEQUAL
   78                    | XOREQUAL
   79                    | OREQUAL

   80 expression: assignment_expression
   81           | expression COMMA assignment_expression

   82 constant_expression: conditional_expression

   83 declaration: declaration_specifiers init_declarator_list SEMICOLON
   84            | declaration_specifiers SEMICOLON

   85 declaration_specifiers: storage_class_specifier declaration_specifiers
   86                       | storage_class_specifier
   87                       | type_specifier declaration_specifiers
   88                       | type_specifier
   89                       | type_qualifier declaration_specifiers
   90                       | type_qualifier
   91                       | function_specifier declaration_specifiers
   92                       | function_specifier

   93 init_declarator_list: init_declarator
   94                     | init_declarator_list COMMA init_declarator

   95 init_declarator: declarator
   96                | declarator ASSIGN initializer

   97 storage_class_specifier: EXTERN
   98                        | AUTO
   99                        | REGISTER
  100                        | STATIC

  101 type_specifier: VOID
  102               | CHAR
  103               | SHORT
  104               | INT
  105               | LONG
  106               | FLOAT
  107               | DOUBLE
  108               | SIGNED
  109               | UNSIGNED
  110               | BOOL
  111               | COMPLEX
  112               | IMAGINARY
  113               | enum_specifier

  114 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  115                         | type_qualifier specifier_qualifier_list_opt

  116 specifier_qualifier_list_opt: %empty
  117                             | specifier_qualifier_list

  118 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  119               | ENUM identifier_opt '{' enumerator_list COMMA '}'
  120               | ENUM IDENTIFIER

  121 identifier_opt: %empty
  122               | IDENTIFIER

  123 enumerator_list: enumerator
  124                | enumerator_list COMMA enumerator

  125 enumerator: IDENTIFIER
  126           | IDENTIFIER ASSIGN constant_expression

  127 type_qualifier: CONST
  128               | RESTRICT
  129               | VOLATILE

  130 function_specifier: INLINE

  131 declarator: pointer direct_declarator
  132           | direct_declarator

  133 direct_declarator: IDENTIFIER
  134                  | '(' declarator ')'
  135                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  136                  | direct_declarator '[' type_qualifier_list ']'
  137                  | direct_declarator '[' assignment_expression ']'
  138                  | direct_declarator '[' ']'
  139                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  140                  | direct_declarator '[' STATIC assignment_expression ']'
  141                  | direct_declarator '[' type_qualifier_list STAR ']'
  142                  | direct_declarator '[' STAR ']'
  143                  | direct_declarator '(' changetable parameter_type_list ')'
  144                  | direct_declarator '(' identifier_list ')'
  145                  | direct_declarator '(' changetable ')'

  146 type_qualifier_list_opt: %empty
  147                        | type_qualifier_list

  148 pointer: STAR type_qualifier_list_opt
  149        | STAR type_qualifier_list_opt pointer

  150 type_qualifier_list: type_qualifier
  151                    | type_qualifier_list type_qualifier

  152 parameter_type_list: parameter_list
  153                    | parameter_list COMMA ELLIPSIS

  154 parameter_list: parameter_declaration
  155               | parameter_list COMMA parameter_declaration

  156 parameter_declaration: declaration_specifiers declarator
  157                      | declaration_specifiers

  158 identifier_list: IDENTIFIER
  159                | identifier_list COMMA IDENTIFIER

  160 type_name: specifier_qualifier_list

  161 initializer: assignment_expression
  162            | '{' initializer_list '}'
  163            | '{' initializer_list COMMA '}'

  164 initializer_list: designation_opt initializer
  165                 | initializer_list COMMA designation_opt initializer

  166 designation_opt: %empty
  167                | designation

  168 designation: designator_list ASSIGN

  169 designator_list: designator
  170                | designator_list designator

  171 designator: '[' constant_expression ']'
  172           | DOT IDENTIFIER

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: IDENTIFIER COLON M statement
  180                  | CASE constant_expression COLON statement
  181                  | DEFAULT COLON statement

  182 compound_statement: '{' block_item_list '}'
  183                   | '{' '}'

  184 block_item_list: block_item
  185                | block_item_list M block_item

  186 block_item: declaration
  187           | statement

  188 expression_statement: expression SEMICOLON
  189                     | SEMICOLON

  190 selection_statement: IF '(' expression N ')' M statement N
  191                    | IF '(' expression N ')' M statement N ELSE M statement
  192                    | SWITCH '(' expression ')' statement

  193 iteration_statement: WHILE M '(' expression ')' M statement
  194                    | DO M statement M WHILE '(' expression ')' SEMICOLON
  195                    | FOR '(' expression_statement M expression_statement ')' M statement
  196                    | FOR '(' expression_statement M expression_statement M expression N ')' M statement

  197 jump_statement: GOTO IDENTIFIER SEMICOLON
  198               | CONTINUE SEMICOLON
  199               | BREAK SEMICOLON
  200               | RETURN expression SEMICOLON
  201               | RETURN SEMICOLON

  202 translation_unit: external_declaration
  203                 | translation_unit external_declaration

  204 external_declaration: function_definition
  205                     | declaration

  206 function_definition: declaration_specifiers declarator declaration_list changetable compound_statement
  207                    | declaration_specifiers declarator changetable compound_statement

  208 declaration_list: declaration
  209                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 4 13 14 19 20 28 36 134 143 144 145 190 191 192 193 194 195 196
    ')' (41) 4 13 14 19 20 28 36 134 143 144 145 190 191 192 193 194 195 196
    '[' (91) 12 135 136 137 138 139 140 141 142 171
    ']' (93) 12 135 136 137 138 139 140 141 142 171
    '{' (123) 19 20 118 119 162 163 182 183
    '}' (125) 19 20 118 119 162 163 182 183
    error (256)
    AUTO (258) 98
    BREAK (259) 199
    CASE (260) 180
    CHAR (261) 102
    CONST (262) 127
    CONTINUE (263) 198
    DEFAULT (264) 181
    DO (265) 194
    ELSE (266) 191
    ENUM (267) 118 119 120
    EXTERN (268) 97
    REGISTER (269) 99
    FLOAT (270) 106
    FOR (271) 195 196
    GOTO (272) 197
    IF (273) 190 191
    INLINE (274) 130
    LONG (275) 105
    RESTRICT (276) 128
    RETURN (277) 200 201
    SHORT (278) 103
    SIGNED (279) 108
    SIZEOF (280) 27 28
    STATIC (281) 100 139 140
    STRUCT (282)
    SWITCH (283) 192
    INT (284) 104
    DOUBLE (285) 107
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 109
    VOID (289) 101
    VOLATILE (290) 129
    WHILE (291) 193 194
    BOOL (292) 110
    COMPLEX (293) 111
    IMAGINARY (294) 112
    IDENTIFIER <sym> (295) 1 15 16 120 122 125 126 133 158 159 172 179 197
    INTEGER_CONSTANT <intVal> (296) 5
    FLOATING_CONSTANT <floatVal> (297) 6
    CHARACTER_CONSTANT <charVal> (298) 7
    STRING_LITERAL <charVal> (299) 3
    DOT (300) 15 172
    ARROW (301) 16
    INCREMENT (302) 17 24
    DECREMENT (303) 18 25
    BITWISEAND (304) 29 56
    STAR (305) 30 38 141 142 148 149
    PLUS (306) 31 42
    MINUS (307) 32 43
    NOT (308) 33
    EXCLAMATION (309) 34
    DIVIDE (310) 39
    PERCENTAGE (311) 40
    LEFTSHIFT (312) 45
    RIGHTSHIFT (313) 46
    LESSTHAN (314) 48
    GREATERTHAN (315) 49
    LESSEQUAL (316) 50
    GREATEREQUAL (317) 51
    EQUAL (318) 53
    NOTEQUAL (319) 54
    XOR (320) 58
    BITWISEOR (321) 60
    AND (322) 62
    OR (323) 64
    QUESTIONMARK (324) 66
    COLON (325) 66 179 180 181
    SEMICOLON (326) 83 84 188 189 194 197 198 199 200 201
    ELLIPSIS (327) 153
    ASSIGN (328) 69 96 126 168
    MULTIPLYEQUAL (329) 70
    DIVIDEEQUAL (330) 71
    MODULOEQUAL (331) 72
    PLUSEQUAL (332) 73
    MINUSEQUAL (333) 74
    SHIFTLEFTEQUAL (334) 75
    SHIFTRIGHTEQUAL (335) 76
    ANDEQUAL (336) 77
    XOREQUAL (337) 78
    OREQUAL (338) 79
    COMMA (339) 20 22 81 94 119 124 153 155 159 163 165
    HASH (340)
    "then" (341)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    primary_expression <exp> (94)
        on left: 1 2 3 4
        on right: 11
    constant <sym> (95)
        on left: 5 6 7
        on right: 2
    M <instrNum> (96)
        on left: 8
        on right: 62 64 66 179 185 190 191 193 194 195 196
    N <stmt> (97)
        on left: 9
        on right: 62 64 66 190 191 196
    changetable (98)
        on left: 10
        on right: 143 145 206 207
    postfix_expression <arr> (99)
        on left: 11 12 13 14 15 16 17 18 19 20
        on right: 12 13 14 15 16 17 18 23
    argument_expression_list <numParams> (100)
        on left: 21 22
        on right: 14 22
    unary_expression <arr> (101)
        on left: 23 24 25 26 27 28
        on right: 24 25 27 35 68
    unary_operator <unaryOp> (102)
        on left: 29 30 31 32 33 34
        on right: 26
    cast_expression <arr> (103)
        on left: 35 36
        on right: 26 36 37 38 39 40
    multiplicative_expression <exp> (104)
        on left: 37 38 39 40
        on right: 38 39 40 41 42 43
    additive_expression <exp> (105)
        on left: 41 42 43
        on right: 42 43 44 45 46
    shift_expression <exp> (106)
        on left: 44 45 46
        on right: 45 46 47 48 49 50 51
    relational_expression <exp> (107)
        on left: 47 48 49 50 51
        on right: 48 49 50 51 52 53 54
    equality_expression <exp> (108)
        on left: 52 53 54
        on right: 53 54 55 56
    and_expression <exp> (109)
        on left: 55 56
        on right: 56 57 58
    exclusive_or_expression <exp> (110)
        on left: 57 58
        on right: 58 59 60
    inclusive_or_expression <exp> (111)
        on left: 59 60
        on right: 60 61 62
    logical_and_expression <exp> (112)
        on left: 61 62
        on right: 62 63 64
    logical_or_expression <exp> (113)
        on left: 63 64
        on right: 64 65 66
    conditional_expression <exp> (114)
        on left: 65 66
        on right: 66 67 82
    assignment_expression <exp> (115)
        on left: 67 68
        on right: 21 22 68 80 81 135 137 139 140 161
    assignment_operator (116)
        on left: 69 70 71 72 73 74 75 76 77 78 79
        on right: 68
    expression <exp> (117)
        on left: 80 81
        on right: 4 12 66 81 188 190 191 192 193 194 196 200
    constant_expression (118)
        on left: 82
        on right: 126 171 180
    declaration (119)
        on left: 83 84
        on right: 186 205 208 209
    declaration_specifiers (120)
        on left: 85 86 87 88 89 90 91 92
        on right: 83 84 85 87 89 91 156 157 206 207
    init_declarator_list (121)
        on left: 93 94
        on right: 83 94
    init_declarator <sym> (122)
        on left: 95 96
        on right: 93 94
    storage_class_specifier (123)
        on left: 97 98 99 100
        on right: 85 86
    type_specifier (124)
        on left: 101 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 87 88 114
    specifier_qualifier_list (125)
        on left: 114 115
        on right: 117 160
    specifier_qualifier_list_opt (126)
        on left: 116 117
        on right: 114 115
    enum_specifier (127)
        on left: 118 119 120
        on right: 113
    identifier_opt (128)
        on left: 121 122
        on right: 118 119
    enumerator_list (129)
        on left: 123 124
        on right: 118 119 124
    enumerator (130)
        on left: 125 126
        on right: 123 124
    type_qualifier (131)
        on left: 127 128 129
        on right: 89 90 115 150 151
    function_specifier (132)
        on left: 130
        on right: 91 92
    declarator <sym> (133)
        on left: 131 132
        on right: 95 96 134 156 206 207
    direct_declarator <sym> (134)
        on left: 133 134 135 136 137 138 139 140 141 142 143 144 145
        on right: 131 132 135 136 137 138 139 140 141 142 143 144 145
    type_qualifier_list_opt (135)
        on left: 146 147
        on right: 148 149
    pointer <stype> (136)
        on left: 148 149
        on right: 131 149
    type_qualifier_list (137)
        on left: 150 151
        on right: 135 136 139 141 147 151
    parameter_type_list (138)
        on left: 152 153
        on right: 143
    parameter_list (139)
        on left: 154 155
        on right: 152 153 155
    parameter_declaration (140)
        on left: 156 157
        on right: 154 155
    identifier_list (141)
        on left: 158 159
        on right: 144 159
    type_name (142)
        on left: 160
        on right: 19 20 28 36
    initializer <sym> (143)
        on left: 161 162 163
        on right: 96 164 165
    initializer_list (144)
        on left: 164 165
        on right: 19 20 162 163 165
    designation_opt (145)
        on left: 166 167
        on right: 164 165
    designation (146)
        on left: 168
        on right: 167
    designator_list (147)
        on left: 169 170
        on right: 168 170
    designator (148)
        on left: 171 172
        on right: 169 170
    statement <stmt> (149)
        on left: 173 174 175 176 177 178
        on right: 179 180 181 187 190 191 192 193 194 195 196
    labeled_statement <stmt> (150)
        on left: 179 180 181
        on right: 173
    compound_statement <stmt> (151)
        on left: 182 183
        on right: 174 206 207
    block_item_list <stmt> (152)
        on left: 184 185
        on right: 182 185
    block_item <stmt> (153)
        on left: 186 187
        on right: 184 185
    expression_statement <exp> (154)
        on left: 188 189
        on right: 175 195 196
    selection_statement <stmt> (155)
        on left: 190 191 192
        on right: 176
    iteration_statement <stmt> (156)
        on left: 193 194 195 196
        on right: 177
    jump_statement <stmt> (157)
        on left: 197 198 199 200 201
        on right: 178
    translation_unit (158)
        on left: 202 203
        on right: 0 203
    external_declaration (159)
        on left: 204 205
        on right: 202 203
    function_definition (160)
        on left: 206 207
        on right: 204
    declaration_list (161)
        on left: 208 209
        on right: 206 209


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    LONG       shift, and go to state 9
    RESTRICT   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    INT        shift, and go to state 14
    DOUBLE     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   98 storage_class_specifier: AUTO .

    $default  reduce using rule 98 (storage_class_specifier)


State 2

  102 type_specifier: CHAR .

    $default  reduce using rule 102 (type_specifier)


State 3

  127 type_qualifier: CONST .

    $default  reduce using rule 127 (type_qualifier)


State 4

  118 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
  119               | ENUM . identifier_opt '{' enumerator_list COMMA '}'
  120               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 121 (identifier_opt)

    identifier_opt  go to state 33


State 5

   97 storage_class_specifier: EXTERN .

    $default  reduce using rule 97 (storage_class_specifier)


State 6

   99 storage_class_specifier: REGISTER .

    $default  reduce using rule 99 (storage_class_specifier)


State 7

  106 type_specifier: FLOAT .

    $default  reduce using rule 106 (type_specifier)


State 8

  130 function_specifier: INLINE .

    $default  reduce using rule 130 (function_specifier)


State 9

  105 type_specifier: LONG .

    $default  reduce using rule 105 (type_specifier)


State 10

  128 type_qualifier: RESTRICT .

    $default  reduce using rule 128 (type_qualifier)


State 11

  103 type_specifier: SHORT .

    $default  reduce using rule 103 (type_specifier)


State 12

  108 type_specifier: SIGNED .

    $default  reduce using rule 108 (type_specifier)


State 13

  100 storage_class_specifier: STATIC .

    $default  reduce using rule 100 (storage_class_specifier)


State 14

  104 type_specifier: INT .

    $default  reduce using rule 104 (type_specifier)


State 15

  107 type_specifier: DOUBLE .

    $default  reduce using rule 107 (type_specifier)


State 16

  109 type_specifier: UNSIGNED .

    $default  reduce using rule 109 (type_specifier)


State 17

  101 type_specifier: VOID .

    $default  reduce using rule 101 (type_specifier)


State 18

  129 type_qualifier: VOLATILE .

    $default  reduce using rule 129 (type_qualifier)


State 19

  110 type_specifier: BOOL .

    $default  reduce using rule 110 (type_specifier)


State 20

  111 type_specifier: COMPLEX .

    $default  reduce using rule 111 (type_specifier)


State 21

  112 type_specifier: IMAGINARY .

    $default  reduce using rule 112 (type_specifier)


State 22

  205 external_declaration: declaration .

    $default  reduce using rule 205 (external_declaration)


State 23

   83 declaration: declaration_specifiers . init_declarator_list SEMICOLON
   84            | declaration_specifiers . SEMICOLON
  206 function_definition: declaration_specifiers . declarator declaration_list changetable compound_statement
  207                    | declaration_specifiers . declarator changetable compound_statement

    IDENTIFIER  shift, and go to state 34
    STAR        shift, and go to state 35
    SEMICOLON   shift, and go to state 36
    '('         shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 24

   85 declaration_specifiers: storage_class_specifier . declaration_specifiers
   86                       | storage_class_specifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    LONG       shift, and go to state 9
    RESTRICT   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    INT        shift, and go to state 14
    DOUBLE     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   87 declaration_specifiers: type_specifier . declaration_specifiers
   88                       | type_specifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    LONG       shift, and go to state 9
    RESTRICT   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    INT        shift, and go to state 14
    DOUBLE     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  113 type_specifier: enum_specifier .

    $default  reduce using rule 113 (type_specifier)


State 27

   89 declaration_specifiers: type_qualifier . declaration_specifiers
   90                       | type_qualifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    LONG       shift, and go to state 9
    RESTRICT   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    INT        shift, and go to state 14
    DOUBLE     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   91 declaration_specifiers: function_specifier . declaration_specifiers
   92                       | function_specifier .

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    LONG       shift, and go to state 9
    RESTRICT   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    INT        shift, and go to state 14
    DOUBLE     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 92 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  203 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 47
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    LONG       shift, and go to state 9
    RESTRICT   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    INT        shift, and go to state 14
    DOUBLE     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  202 translation_unit: external_declaration .

    $default  reduce using rule 202 (translation_unit)


State 31

  204 external_declaration: function_definition .

    $default  reduce using rule 204 (external_declaration)


State 32

  120 enum_specifier: ENUM IDENTIFIER .
  122 identifier_opt: IDENTIFIER .

    '{'       reduce using rule 122 (identifier_opt)
    $default  reduce using rule 120 (enum_specifier)


State 33

  118 enum_specifier: ENUM identifier_opt . '{' enumerator_list '}'
  119               | ENUM identifier_opt . '{' enumerator_list COMMA '}'

    '{'  shift, and go to state 49


State 34

  133 direct_declarator: IDENTIFIER .

    $default  reduce using rule 133 (direct_declarator)


State 35

  148 pointer: STAR . type_qualifier_list_opt
  149        | STAR . type_qualifier_list_opt pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 10
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 146 (type_qualifier_list_opt)

    type_qualifier           go to state 50
    type_qualifier_list_opt  go to state 51
    type_qualifier_list      go to state 52


State 36

   84 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 84 (declaration)


State 37

  134 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 34
    STAR        shift, and go to state 35
    '('         shift, and go to state 37

    declarator         go to state 53
    direct_declarator  go to state 41
    pointer            go to state 42


State 38

   83 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   94 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 54
    COMMA      shift, and go to state 55


State 39

   93 init_declarator_list: init_declarator .

    $default  reduce using rule 93 (init_declarator_list)


State 40

   95 init_declarator: declarator .
   96                | declarator . ASSIGN initializer
  206 function_definition: declaration_specifiers declarator . declaration_list changetable compound_statement
  207                    | declaration_specifiers declarator . changetable compound_statement

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    LONG       shift, and go to state 9
    RESTRICT   shift, and go to state 10
    SHORT      shift, and go to state 11
    SIGNED     shift, and go to state 12
    STATIC     shift, and go to state 13
    INT        shift, and go to state 14
    DOUBLE     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21
    ASSIGN     shift, and go to state 56

    '{'       reduce using rule 10 (changetable)
    $default  reduce using rule 95 (init_declarator)

    changetable              go to state 57
    declaration              go to state 58
    declaration_specifiers   go to state 59
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list         go to state 60


State 41

  132 declarator: direct_declarator .
  135 direct_declarator: direct_declarator . '[' type_qualifier_list assignment_expression ']'
  136                  | direct_declarator . '[' type_qualifier_list ']'
  137                  | direct_declarator . '[' assignment_expression ']'
  138                  | direct_declarator . '[' ']'
  139                  | direct_declarator . '[' STATIC type_qualifier_list assignment_expression ']'
  140                  | direct_declarator . '[' STATIC assignment_expression ']'
  141                  | direct_declarator . '[' type_qualifier_list STAR ']'
  142                  | direct_declarator . '[' STAR ']'
  143                  | direct_declarator . '(' changetable parameter_type_list ')'
  144                  | direct_declarator . '(' identifier_list ')'
  145                  | direct_declarator . '(' changetable ')'

    '('  shift, and go to state 61
    '['  shift, and go to state 62

    $default  reduce using rule 132 (declarator)


State 42

  131 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 37

    direct_declarator  go to state 63


State 43

   85 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 85 (declaration_specifiers)


State 44

   87 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 87 (declaration_specifiers)


State 45

   89 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 89 (declaration_specifiers)


State 46

   91 declaration_specifiers: function_specifier declaration_specifiers .

    $default  reduce using rule 91 (declaration_specifiers)


State 47

    0 $accept: translation_unit $end .

    $default  accept


State 48

  203 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 203 (translation_unit)


State 49

  118 enum_specifier: ENUM identifier_opt '{' . enumerator_list '}'
  119               | ENUM identifier_opt '{' . enumerator_list COMMA '}'

    IDENTIFIER  shift, and go to state 64

    enumerator_list  go to state 65
    enumerator       go to state 66


State 50

  150 type_qualifier_list: type_qualifier .

    $default  reduce using rule 150 (type_qualifier_list)


State 51

  148 pointer: STAR type_qualifier_list_opt .
  149        | STAR type_qualifier_list_opt . pointer

    STAR  shift, and go to state 35

    $default  reduce using rule 148 (pointer)

    pointer  go to state 67


State 52

  147 type_qualifier_list_opt: type_qualifier_list .
  151 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 10
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 147 (type_qualifier_list_opt)

    type_qualifier  go to state 68


State 53

  134 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 69


State 54

   83 declaration: declaration_specifiers init_declarator_list SEMICOLON .

    $default  reduce using rule 83 (declaration)


State 55

   94 init_declarator_list: init_declarator_list COMMA . init_declarator

    IDENTIFIER  shift, and go to state 34
    STAR        shift, and go to state 35
    '('         shift, and go to state 37

    init_declarator    go to state 70
    declarator         go to state 71
    direct_declarator  go to state 41
    pointer            go to state 42

